# quantnodes-strategy-research

./: .env.example  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: python-publish.yml  tests.yml
.ipynb_checkpoints/: README-checkpoint.md
docs/: PLAN-phase1-4.md  autoresearch-design.md  backtest-engine-design.md  enhancement.md  goal-design.md  llm-config-template.yaml  p5-execution-plan.md  validation-design.md  vibe-trading-core-patterns.md  vibe-trading-credits.md  vibe-trading-survey.md  workflow-design.md  xfail-tests.md
docs/backtest-overhaul/: README.md
docs/research/: v0.5.0-init-literature.md
examples/: demo_workflow.py  session_example.py
graphify-out/: .graphify_labels.json  .graphify_root  GRAPH_REPORT.md  manifest.json
graphify-out/cache/: stat-index.json
src/strategy_research/: __init__.py  cli.py
src/strategy_research/api/: app.py
src/strategy_research/api/routers/: goal.py  hypothesis.py  memory.py  run.py  session.py  validation.py
src/strategy_research/cli/: __init__.py  __main__.py  _auto_onboard.py  halt.py  llm_config.py  llm_streaming.py  mandate.py  onboard.py  theme.py
src/strategy_research/cli/commands/: __init__.py  autoresearch.py  export.py  help.py  server.py  session.py  show.py  skills.py  slash_chat.py  slash_goal.py  slash_halt.py  slash_memory.py  slash_router.py  slash_session.py  swarm.py
src/strategy_research/cli/components/: __init__.py  chat_log.py  hint_bar.py  tool_event.py  working_indicator.py
src/strategy_research/cli/interactive/: __init__.py  completer.py  main.py
src/strategy_research/cli/tui/: __init__.py  app.py  keybindings.py  messages.py  session.py  styles.tcss  theme.py
src/strategy_research/cli/ui/: __init__.py  banner.py  rail.py  transcript.py
src/strategy_research/cli/utils/: __init__.py  ascii_compat.py  format.py  thinking_verbs.py
src/strategy_research/core/: __init__.py  alpha_zoo_adapter.py  alpha_zoo_convert.py  alpha_zoo_ops.py  alpha_zoo_yaml.py  autoresearch.py  backtest.py  compute_factor.py  config_runner.py  data_import.py  db.py  factor_validate.py  git.py  preflight.py  run_card.py
src/strategy_research/core/agent/: context.py  frontmatter.py  loop.py  progress.py  redaction.py  role_factory.py  sandbox.py  tools.py  trace.py
src/strategy_research/core/alpha_zoo/: __init__.py  alpha_zoo_ops.py
src/strategy_research/core/data_source/: __init__.py  akshare_loader.py  base.py  cache.py  eastmoney_loader.py  fred_loader.py  ifind_loader.py  local_loader.py  registry.py  tencent_loader.py  tushare_loader.py  utils.py  yfinance_loader.py
src/strategy_research/core/engine/: __init__.py  artifacts.py  base.py  china_a.py  china_futures.py  cli.py  composite.py  (+11 more)
src/strategy_research/templates/: README.md  config.yaml  prepare.py  program.md  strategy.py
src/strategy_research/webui/: routes.py
tests/: conftest.py  integration_test.py  test_agent_loop.py  test_agent_loop_extensions.py  test_agent_tools.py  test_alpha_zoo.py  test_alpha_zoo_adapter.py  test_alpha_zoo_convert.py  test_alpha_zoo_ops.py  test_anti_overfit_analyst.py  test_api.py  test_autoresearch.py  test_backtest.py  test_backtest_config.py  test_backtest_engine.py  test_backtest_metrics.py  test_backtest_models.py  test_backtest_utils.py  test_cli_ascii_compat.py  test_cli_banner.py  test_cli_captured_console.py  test_cli_chat_cmd.py  test_cli_chat_log.py  test_cli_completer.py  test_cli_entry_dispatch.py  test_cli_goal_cmd.py  test_cli_halt.py  test_cli_halt_cmd.py  test_cli_help.py  test_cli_hint_bar.py  test_cli_init.py  test_cli_llm_flags.py  test_cli_llm_streaming.py  test_cli_main.py  test_cli_mandate.py  test_cli_memory_cmd.py  test_cli_onboard.py  test_cli_rail.py  test_cli_session_cmd.py  test_cli_show_cmd.py  (+124 more)
tests/_fixtures/: fundamental_mock.py
(+1047 files in other folders)
