[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantnodes-strategy-research"
version = "0.3.0"
description = "通用策略自动研究框架 — Karpathy autoresearch 极简 + 多 Agent 增强"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "QuantNodes Team"}]
keywords = ["quantitative", "research", "strategy", "factor", "backtest"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "duckdb>=0.9.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "scipy>=1.10.0",
    "httpx>=0.27",          # OpenAI-compatible LLM client (PR5)
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]
llm = [
    "python-dotenv>=1.0",   # Auto-load .env into OPENAI_API_KEY (optional)
]

[project.scripts]
quantnodes-research = "strategy_research.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
strategy_research = ["templates/**/*", "templates/.prompts/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
