[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantnodes-strategy-research"
version = "0.4.1"
description = "通用策略自动研究框架 — Karpathy autoresearch 极简 + 多 Agent 增强 + Rich CLI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "QuantNodes Team"}]
keywords = ["quantitative", "research", "strategy", "factor", "backtest"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "duckdb>=0.9.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "scipy>=1.10.0",
    "httpx>=0.27",          # OpenAI-compatible LLM client (PR5)
    "prompt-toolkit>=3.0",  # REPL input layer (Phase A)
    "textual>=0.50",        # Full-screen Textual TUI (Phase B v0.4.0)
    "markdownify>=0.13",    # HTML → Markdown (Phase 2: Web I/O)
    "duckduckgo-search>=7.0",  # Free web search, no API key (Phase 2: Web I/O)
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]
llm = [
    "python-dotenv>=1.0",   # Auto-load .env into OPENAI_API_KEY (optional)
]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
]
engine = [
    "pydantic>=2.5",
    "QuantOPT>=0.1.1",
]
webui = [
    "jinja2>=3.1",
]

[project.scripts]
quantnodes-research = "strategy_research.cli.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
strategy_research = ["templates/**/*", "templates/.prompts/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "W", "I", "C90"]
ignore = ["E501", "E741"]

[tool.ruff.lint.per-file-ignores]
"src/strategy_research/core/alpha_zoo/**" = ["F401"]
"src/strategy_research/core/data_source/**" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["strategy_research"]
